unpackaged/main/default/objects/Activity/fields/FS_Category__c.field-meta.xml
<CustomField>
    <fullName>FS_Category__c</fullName>
    <inlineHelpText>category of the Call</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual Meeting</fullName>
            </value>
            <value>
                <fullName>Membership</fullName>
            </value>
            <value>
                <fullName>CLE &amp; Events</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Publications</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>CLE</fullName>
                <isActive>false</isActive>
                <label>CLE</label>
            </value>
            <value>
                <fullName>Demographics</fullName>
                <isActive>false</isActive>
                <label>Demographics</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>