unpackaged/main/default/objects/Activity/fields/FS_Method_In__c.field-meta.xml
<CustomField>
    <fullName>FS_Method_In__c</fullName>
    <label>Method In</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Voicemail</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>Internal Request</fullName>
            </value>
            <value>
                <fullName>Correspondence</fullName>
                <isActive>false</isActive>
                <label>Correspondence</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>