unpackaged/main/default/objects/Activity/fields/FS_Reason__c.field-meta.xml
<CustomField>
    <fullName>FS_Reason__c</fullName>
    <inlineHelpText>Reason for call</inlineHelpText>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FS_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inquiry</fullName>
            </value>
            <value>
                <fullName>Registration</fullName>
            </value>
            <value>
                <fullName>Registration Modification</fullName>
            </value>
            <value>
                <fullName>Badge Request</fullName>
            </value>
            <value>
                <fullName>Cancellation/Reimbursement</fullName>
            </value>
            <value>
                <fullName>CLE Event/Product Inquiry</fullName>
            </value>
            <value>
                <fullName>CLE Event Registration/Product Purchase</fullName>
            </value>
            <value>
                <fullName>CLE Certificate Request</fullName>
            </value>
            <value>
                <fullName>CLE Tracker</fullName>
            </value>
            <value>
                <fullName>CE21 Help</fullName>
            </value>
            <value>
                <fullName>Other Event Inquiry or Registration (non-CLE)</fullName>
            </value>
            <value>
                <fullName>Join or Reactivate Membership</fullName>
            </value>
            <value>
                <fullName>Dues Renewal</fullName>
            </value>
            <value>
                <fullName>Section or Committee Request</fullName>
            </value>
            <value>
                <fullName>ID Card Request</fullName>
            </value>
            <value>
                <fullName>Website Help</fullName>
            </value>
            <value>
                <fullName>Password Reset</fullName>
            </value>
            <value>
                <fullName>Order</fullName>
            </value>
            <value>
                <fullName>Order Status</fullName>
            </value>
            <value>
                <fullName>Product Issue</fullName>
            </value>
            <value>
                <fullName>Refund/Return</fullName>
            </value>
            <value>
                <fullName>Address or Demographic Update</fullName>
            </value>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>NYSBA Form Request</fullName>
            </value>
            <value>
                <fullName>Invoice Request</fullName>
            </value>
            <value>
                <fullName>Receipt Request</fullName>
            </value>
            <value>
                <fullName>Non-NYSBA Inquiry</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Additional Enrollment</fullName>
                <isActive>false</isActive>
                <label>Additional Enrollment</label>
            </value>
            <value>
                <fullName>App Help</fullName>
                <isActive>false</isActive>
                <label>App Help</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>